<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Newsan Utilities</string>
    <string name="action_settings">Settings</string>
    <string name="user_agent">User Agent</string>
    <string name="drm">DRM</string>
    <string name="app_list">Lista de apps</string>
    <string name="device_information">Información del dispositivo</string>

    <!--  General Purpose -->
    <string name="text_splitter"><![CDATA[" // "]]></string>

    <!-- Device Information -->
    <string name="information_android_version">Versión de Android</string>
    <string name="information_model_name">Modelo</string>
    <string name="information_manufacturer">Fabricante</string>

    <!-- Apps List -->
    <string name="loading">Cargando…</string>

</resources>
